# chokai-fee

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  ocr.rs
src/components/: ConfirmDialog.tsx  ImagePanel.tsx  ImportViewer.tsx  MemberTable.tsx  Sidebar.tsx  UpdateNotifier.tsx  YearHeader.tsx
